--- a/Practice/my-2nd-repo/index.html
+++ b/Practice/my-2nd-repo/index.html
@@ -14,6 +14,6 @@
     <p>More paragraph</p>
     <p>I am coding coding and codding </p>
     <img src="/Practice/my-2nd-repo/IMG/Flying.png" alt="">
-    <img src="/Practice/my-2nd-repo/IMG/Emjoying.PNG" alt="">
+    <img src="/Practice/my-2nd-repo/IMG/enjoying.png" alt="">
 </body>
 </html>
