Second Section done

--- a/Practice/Goku Portfolio/index.html
+++ b/Practice/Goku Portfolio/index.html
@@ -17,13 +17,32 @@
             <h1>Welcome To</h1>
             <h1><span class="goku2nd">Goku's</span> World!</h1>
             <h3>Worlds most powerful Saiyan and always try to protect the world from any denger</h3>
-            <p>"No, see, I don't think of it like I'm saving the world. The fact is, it's because I'm usually trying to challenge the strongest warriors I can find. That's how this tournament happened, too. But I can't bear the thought of innocent lives getting wiped out just because I want to fight the best. So, I'll do what I can for them."</p>
-            <a class="my-profile-button" target="_blank" href="https://dragonball.fandom.com/wiki/Goku#Concept_and_creation">MY PROFILE</a>
+            <p>
+                "No, see, I don't think of it like I'm saving the world. The fact is, it's because I'm usually trying to challenge the strongest warriors I can find. That's how this tournament happened, too. But I can't bear the thought of innocent lives getting wiped out just because I want to fight the best. So, I'll do what I can for them."
+            </p>
+            <a class="my-profile-button" target="_blank" href="https://dragonball.fandom.com/wiki/Goku#Concept_and_creation">MY WIKI</a>
         </div>
     
         <div class="first-half-weidth">
             <img src="/img/GokuF.jpg" alt="">
         </div>
     </section>
+
+    <section class="my-family">
+        <div class="first-half-weidth">
+            <img src="img/Goku.jpg" alt="">
+        </div>
+        <div class="first-half-weidth">
+            <h1>My FAMILY</h1>
+            <h3>Love my family very much and can do anything for my family</h3>
+            <p>
+                The Son family is introduced in the series with the character Son Goku, whose name is the Japanese on'yomi rendering of Sun Wukong, a character from popular Chinese and Japanese cultures. Unlike most associated characters, the Son family does not have a theme of naming. <br>
+
+                The Sons are noted as a family from Mount Paozu in the series. Supporting the fact that the Sons are an Eastern family, the Sons' last name is placed in front of the individual's name, which is consistent with family names in the real-life Eastern cultures. Furthermore, the Sons tend to wear traditional Asian styled garbs for their regular clothing.
+            </p>
+            <a class="my-profile-button" target="_blank" href="https://dragonball.fandom.com/wiki/Son_family">MY FAMILY</a>
+        </div>
+    </section>
 </body>
+
 </html>
