3rd and last section is also done

--- a/Practice/Goku Portfolio/index.html
+++ b/Practice/Goku Portfolio/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="first-half-weidth">
             <h1>Welcome To</h1>
             <h1><span class="goku2nd">Goku's</span> World!</h1>
@@ -28,7 +28,7 @@
         </div>
     </section>
 
-    <section class="my-family">
+    <section class="my-family flexible-container">
         <div class="first-half-weidth">
             <img src="img/Goku.jpg" alt="">
         </div>
@@ -41,6 +41,38 @@
                 The Sons are noted as a family from Mount Paozu in the series. Supporting the fact that the Sons are an Eastern family, the Sons' last name is placed in front of the individual's name, which is consistent with family names in the real-life Eastern cultures. Furthermore, the Sons tend to wear traditional Asian styled garbs for their regular clothing.
             </p>
             <a class="my-profile-button" target="_blank" href="https://dragonball.fandom.com/wiki/Son_family">MY FAMILY</a>
+        </div>
+    </section>
+
+    <section class="three-saiyan">
+        <h1>THREE SAIYANS</h1>
+        <div class="flexible-container">
+            <div id="left-border-blue" class="saiyan">
+                <h2>Super Saiyan</h2>
+                <h3 class="goku2nd">First Appeared: Dragon Ball Z Episode 95 ("Transformed At Last")</h3>
+                <img src="/img/Super Saiyan.jpg" alt="">
+                <p>
+                    Goku's initial transformation into a Super Saiyan remains a high point of Dragon Ball as a whole. Frieza pushed Goku a little too far by killing Krillin, which triggered this legendary transformation. At a time when transformations weren't a regular occurrence, the weight of this moment laid the foundation for everything to come in Dragon Ball. To make matters more interesting, the Super Saiyan form was also utilized throughout the entire Android Saga.
+                </p>
+            </div>
+            
+            <div id="left-border-darkorange" class="saiyan">
+                <h2>Super Saiyan Blue</h2>
+                <h3  class="goku2nd">First Appeared: Dragon Ball Z: Resurrection 'F'</h3>
+                <img src="img/Super Saiyan Blue.jpg" alt="">
+                <p>
+                    Super Saiyan Blue, or Super Saiyan God Super Saiyan, takes things back to a simpler time. Less complicated than other high-level transformations, Super Saiyan Blue looks much like the Super Saiyan transformation, only with new blue hair. First used by Goku against Golden Frieza, it immediately became the flagship transformation of Dragon Ball Super.
+                </p>
+            </div>
+    
+            <div id="left-border-aqua" class="saiyan">
+                <h2>Perfected Ultra Instinct</h2>
+                <h3  class="goku2nd">First Appeared: Dragon Ball Super Episode 129 ("A Transcendent Limit Break! Autonomous Ultra Instinct Mastered!")</h3>
+                <img src="/img/Ultra Saiyan.jpg" alt="">
+                <p>
+                    When Goku first tapped into Ultra Instinct during the Tournament of Power, it was clear to many in attendance that Goku's Ultra Instinct was incomplete. Goku's Ultra Instinct -Sign- had numerous flaws, which led to it falling short of Jiren's immense powers. Toward the end of the Tournament of Power, Goku was able to channel into Ultra Instinct to fully complete it.
+                </p>
+            </div>
         </div>
     </section>
 </body>
